dev/scss/00_critical-inline.scss
/* ... */
.total-wrapper {
  min-height: 100vh;
  position: relative;

  > main {
    // layouts without a sidebar
    padding-top: $header_height + 1;

    @media #{$mq_lg} {
      padding-top: $header_height + 1;
    }

  }

  body.wp-singular & > footer {
    min-height: calc(100vh - #{$header_height}); // ensure footer is fat (for secondary header scripts)
  }

}

.site-header {
  backface-visibility: hidden; // fixed position fix for old mobile browsers
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: $z_header;

  .inner-wrapper {
    align-items: stretch;
    display: flex;
    max-width: $bp_max;
    padding-left: 0;
    padding-right: 0;
  }

  &-primary,
  &-secondary {
    background-color: $c_dark-base;  // fallback
  }

  &-primary {
    background: radial-gradient(ellipse at right top, $c_dark-base 0%, $c_grey80 100%);
  }

  &-primary .inner-wrapper {
    height: $header_height;
  }

  &-secondary {
    background: linear-gradient(180deg, rgba($c_grey50,1), rgba($c_grey50,0.75));
    display: none; // show with JS

    .inner-wrapper {
      @include f_smaller;
      display: flex;
      height: $header_height--secondary;
      justify-content: space-between;
    }

    a {
      align-items: center;
      display: flex;
      height: 100%;
      min-width: 40px;
      padding: 4px $gutter;
      @media #{$mq_xl} {
        padding-left: $gutter_lg;
        padding-right: $gutter_lg;
      }
    }

    .title {
      //flex-grow: 1;
      overflow-x: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;

      strong {
        font-weight: 600;
      }

    }

  }

}

.header-logo {
  flex-grow: 1;

  a {
    // consider logo suffixes on some parts of site
    align-items: center;
    display: flex;
    height: 100%;
    padding: 4px;

    &:focus {
      outline-offset: 4px;
      outline-width: 2px;
    }

    @media #{$mq_sm2} {
      padding-left: $gutter;
      padding-right: $gutter;
    }

    @media #{$mq_xl} {
      padding-left: $gutter_lg;
      padding-right: $gutter_lg;
    }

  }

  svg {
    align-self: baseline;
    height: 150%; // let the y dangle over
    max-height: 48px;
  }

}

.screen-reader-nav,
.header-nav {
  position: relative;

  ul {
    display: flex;
    flex-flow: column wrap;
    height: 100%;
    list-style: none;
  }

  li {
    margin: 0; // override general list item styling

    &:not(:last-child) { // override general list item styling
      margin: 0;
    }

  }

  a {
    align-items: center;
    display: flex;
    font-size: 0.875rem;
    font-weight: 500;
    padding-left: 8px;
    padding-right: 8px;
    width: 100%;

    @media #{$mq_sm3} {
      font-size: 1rem;
      padding: 0 $gutter;
    }

    @media #{$mq_xl} {
      padding-left: $gutter_lg;
      padding-right: $gutter_lg;
    }

  }

  > nav {
    background-color: $c_grey80;
    padding: 4px 0;
    z-index: $z_nav;

    a {
      border-color: $c_primary-dark;
      border-left-color: $c_primary;
      border-style: solid;
      border-width: 0 0 0 4px;
      padding: 8px 16px;

      &:not(:hover):not(:active):not(:focus) {
        color: $c_white;
      }

      &:hover,
      &:focus {
        border-left-color: $c_hover;
        color: $c_hover;
      }

    }

    li li a {
      padding-left: 32px;
    }

  }

}

.screen-reader-nav > nav {
  z-index: $z_nav+1; // edge case when primary nav and this nav are both open
}

.exposed-nav button,
.header-nav > button {
  border-radius: 0;
  color: var(--c_link);
  height: $header_height;
  padding: 0 12px;

  &:not(:hover):not(:active):not(:focus) {
    background-color: transparent;
    color: var(--c_link);
  }

  &:hover {
    background-color: var(--c_hover);
    border-color: var(--c_hover-dark);
    border-width: 2px;
    color: $c_truewhite;
  }

}

.exposed-nav {
  display: none;

  ul {
    align-items: center;
    display: flex;
    height: $header_height;
  }

  li {
    display: none;

    &:not(:last-child) {
      margin-bottom: 0; // override
    }

  }

  button {
    border-left-width: 2px; // keep the width from jumping on hover
    border-right-width: 2px;
  }

  li.emeryville button {
    background-color: var(--cmpn_paleteal);
    background: linear-gradient(180deg, var(--cmpn_paleteal) 0%, var(--cmpn_lightteal) 100%);
    border-color: var(--cmpn_paleteal);

    &:not(:hover):not(:active):not(:focus) {
      color: var(--cmpn_link);
    }

    &:hover,
    &:focus {
      background: none;
      background-color: var(--c_hover);
      border-color: var(--c_hover-dark);
    }

  }

  @media #{$mq_sm3} {
    display: block;

    li:first-child {
      display: block;
    }

  }

  @media #{$mq_md} {

    li:nth-child(2) {
      display: block;
    }

  }

  @media #{$mq_lg} {

    li {
      display: block;
    }

  }

}

.header-nav {

  > button {

    &.nav-trigger {
      // override texture
      border-left-width: 2px; // keep the width from jumping on hover
      border-right-width: 2px;
    }

    .nav-menu-icon {
      font-size: 20px;
      font-weight: 700;
    }

    .nav-menu-text {
      @extend .u_visually-hidden;
      font-size: 16px;
      font-weight: 200;
      margin-left: 6px;
    }

  }

  > nav {
    max-width: 90vw;
    opacity: 0;
    position: absolute;
    right: -1*$nav_width;
    top: $header_height;
    transition-duration: 0.25s;
    transition-property: opacity, right, visibility;
    transition-timing-function: ease-in;
    visibility: hidden;
    width: $nav_width;
  }

  &[aria-expanded="true"] {

    > button:not(:hover):not(:active):not(:focus) {
      background-color: $c_active;
      border-color: $c_active-dark;
      color: $c_truewhite;
    }

    > nav {
      opacity: 1;
      right: 0;
      visibility: visible;
    }

  }

}
/* ... */

